<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.signup.SignUpActivity">

    <EditText
        android:id="@+id/txt_signup_display_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="20"
        android:hint="@string/hint_username"
        android:inputType="text" />

    <EditText
        android:id="@+id/txt_signup_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="20"
        android:hint="@string/hint_e_mail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/txt_signup_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/txt_signup_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_confirm_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_signup_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/btn_round_corners"
        android:text="@string/action_create_account"
        android:textColor="@android:color/white" />

</LinearLayout>